--- a/uni_modules/sky-nutui/package.json
+++ b/uni_modules/sky-nutui/package.json
@@ -1,7 +1,7 @@
 {
     "id": "sky-nutui",
     "displayName": "UniNutUI", 
-    "version": "1.0.2", 
+    "version": "1.0.8", 
     "description": "京东风格UI组件库",
     "keywords": [
         "京东风格"
@@ -41,7 +41,7 @@
             },
             "client": { 
                 "App": {
-                    "app-vue": "y",
+                    "app-vue": "n",
                     "app-nvue": "n"
                 },
                 "H5-mobile": {
@@ -53,22 +53,22 @@
                     "QQ浏览器(Android)": "y"
                 },
                 "H5-pc": {
-                    "Chrome": "u",
-                    "IE": "u",
-                    "Edge": "u",
-                    "Firefox": "u",
-                    "Safari": "u"
+                    "Chrome": "n",
+                    "IE": "n",
+                    "Edge": "n",
+                    "Firefox": "n",
+                    "Safari": "n"
                 },
                 "小程序": {
                     "微信": "y",
-                    "阿里": "y",
-                    "百度": "y",
-                    "字节跳动": "y",
-                    "QQ": "y"
+                    "阿里": "u",
+                    "百度": "u",
+                    "字节跳动": "u",
+                    "QQ": "u"
                 },
                 "快应用": {
-                    "华为": "u",
-                    "联盟": "u"
+                    "华为": "n",
+                    "联盟": "n"
                 }
             }
         }
