--- a/uni_modules/sky-nutui/package.json
+++ b/uni_modules/sky-nutui/package.json
@@ -1,10 +1,11 @@
 {
     "id": "sky-nutui",
     "displayName": "UniNutUI", 
-    "version": "1.1.0", 
+    "version": "1.1.1", 
     "description": "京东风格UI组件库",
     "keywords": [
-        "京东风格"
+        "ui",
+        "nutui"
     ], 
     "repository": "https://github.com/jwaterwater/uni-nutui", 
     "engines": { 
