新增 地址/商品卡片/商品分类 组件

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "UniNutUI",
+    "name" : "nutui",
     "appid" : "__UNI__3B119CF",
     "description" : "",
     "versionName" : "1.0.0",
