--- a/uni_modules/sky-nutui/components/sky-nutui/packages/styles/font/config.json
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/styles/font/config.json
@@ -96,7 +96,9 @@
         "heart1",
         "heart-fill",
         "star-n",
-        "star-fill-n"
+        "star-fill-n",
+        "triangle-down",
+        "triangle-up"
       ]
     },
     {
