--- a/manifest.json
+++ b/manifest.json
@@ -107,5 +107,11 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "3"
+    "vueVersion" : "3",
+    "h5" : {
+        "router" : {
+            "mode" : "hash",
+            "base" : "/nutui/"
+        }
+    }
 }
